--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
         build: "./build/cmd"
         environment:
             - "PAIRCODE=USD_JPY EUR_JPY"
+            - "START=2015-01-01"
+            - "END=2020-01-01"
+            - "LAYOUT=2006-01-02"
+            - "GRANULARITY=H3"
     influxdb:
         image: influxdb:1.3
         volumes:
